import { render, fireEvent, act } from '@testing-library/react';
import GlowingInput from '../GlowingInput';

describe('Glowing input', () => {
    test('renders GlowingInput component', () => {
        const { getByLabelText } = render(
            <GlowingInput
                label="Enter line number:"
                glowColor="#ffcc00"
                shouldGlow={true}
                onColorChange={jest.fn()}
                onInput={jest.fn()}
                index={0}
            />
        );
        expect(getByLabelText(/Enter line number:/i)).toBeInTheDocument();
    });

    test('input glows when shouldGlow is true and value is present', () => {
        const { getByLabelText } = render(
            <GlowingInput
                label="Enter line number:"
                glowColor="#ffcc00"
                shouldGlow={true}
                onColorChange={jest.fn()}
                onInput={jest.fn()}
                index={0}
            />
        );

        const input = getByLabelText(/Enter line number:/i);
        act(() => {
            fireEvent.change(input, { target: { value: '1' } });
        });
        // The glow is drawn by the stylesheet from this property. An inline box-shadow would beat the focus style.
        expect(input).toHaveClass('glowing-input');
        expect(input).toHaveStyle('--glow-color: #ffcc00');
        expect(input.style.boxShadow).toBe('');
    });

    test('input does not glow when shouldGlow is false', () => {
        const { getByLabelText } = render(
            <GlowingInput
                label="Enter line number:"
                glowColor="#ffcc00"
                shouldGlow={false}
                onColorChange={jest.fn()}
                onInput={jest.fn()}
                index={0}
            />
        );

        const input = getByLabelText(/Enter line number:/i);
        act(() => {
            fireEvent.change(input, { target: { value: '1' } });
        });
        expect(input).not.toHaveStyle('--glow-color: #ffcc00');
    });

    test('calls onInput with correct arguments when input changes', () => {
        const onInputMock = jest.fn();
        const { getByLabelText } = render(
            <GlowingInput
                label="Enter line number:"
                glowColor="#ffcc00"
                shouldGlow={true}
                onColorChange={jest.fn()}
                onInput={onInputMock}
                index={0}
            />
        );

        const input = getByLabelText(/Enter line number:/i);
        act(() => {
            fireEvent.change(input, { target: { value: '2' } });
        });
        expect(onInputMock).toHaveBeenCalledWith(0, 2);
    });

    test('calls onColorChange correctly when input value is valid', () => {
        const onColorChangeMock = jest.fn();
        const { getByLabelText } = render(
            <GlowingInput
                label="Enter line number:"
                glowColor="#ffcc00"
                shouldGlow={true}
                onColorChange={onColorChangeMock}
                onInput={jest.fn()}
                index={0}
            />
        );

        const input = getByLabelText(/Enter line number:/i);
        act(() => {
            fireEvent.change(input, { target: { value: '3' } });
        });
        expect(onColorChangeMock).toHaveBeenCalledWith("#ffcc00", 2);
    });

    test('does not apply glow and removes the previous glow with non-numeric input', () => {
        const onColorChangeMock = jest.fn();
        const { getByLabelText } = render(
            <GlowingInput
                label="Enter line number:"
                glowColor="#ffcc00"
                shouldGlow={true}
                onColorChange={onColorChangeMock}
                onInput={jest.fn()}
                index={0}
            />
        );

        const input = getByLabelText(/Enter line number:/i);
        act(() => {
            fireEvent.change(input, { target: { value: 'abc' } });
        });
        expect(onColorChangeMock).toHaveBeenCalledTimes(1);
        expect(onColorChangeMock).toHaveBeenCalledWith("#ffcc00", -1);
        expect(input).not.toHaveStyle('--glow-color: #ffcc00');
    });

    test('removes glow and calls onColorChange with -1 when input is cleared', () => {
        const onColorChangeMock = jest.fn();
        const { getByLabelText } = render(
            <GlowingInput
                label="Enter line number:"
                glowColor="#ffcc00"
                shouldGlow={true}
                onColorChange={onColorChangeMock}
                onInput={jest.fn()}
                index={0}
            />
        );

        const input = getByLabelText(/Enter line number:/i);
        act(() => {
            fireEvent.change(input, { target: { value: '5' } });
            fireEvent.change(input, { target: { value: '' } });
        })
        expect(onColorChangeMock).toHaveBeenCalledWith("#ffcc00", -1);
        expect(input).not.toHaveStyle('--glow-color: #ffcc00');
    });

    test('matches snapshot when shouldGlow is true', () => {
        const { asFragment } = render(
            <GlowingInput
                label="Enter line number:"
                glowColor="#ffcc00"
                shouldGlow={true}
                onColorChange={jest.fn()}
                onInput={jest.fn()}
                index={0}
            />
        );
        expect(asFragment()).toMatchSnapshot();
    });

    test('matches snapshot when shouldGlow is false', () => {
        const { asFragment } = render(
            <GlowingInput
                label="Enter line number:"
                glowColor="#ffcc00"
                shouldGlow={false}
                isExpression
                onColorChange={jest.fn()}
                onInput={jest.fn()}
                index={0}
            />
        );
        expect(asFragment()).toMatchSnapshot();
    });
});