// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Glowing input matches snapshot when shouldGlow is false 1`] = `
<DocumentFragment>
  <div
    class="input-item"
  >
    <label
      class="input-label"
      for="glowing-input-0"
    >
      Enter line number:
    </label>
    <input
      aria-describedby="glowing-input-0-hint"
      class="input-field "
      id="glowing-input-0"
      placeholder="p -> q"
      type="text"
      value=""
    />
    <p
      class="syntax-hint"
      id="glowing-input-0-hint"
    >
      Syntax: -&gt; implies, & and, | or, - not
    </p>
    <div
      aria-label="Connectives"
      class="connective-buttons"
      role="group"
    >
      <button
        aria-label="Insert implies (->)"
        class="connective-btn"
        title="Insert implies (->)"
        type="button"
      >
        →
      </button>
      <button
        aria-label="Insert and (&)"
        class="connective-btn"
        title="Insert and (&)"
        type="button"
      >
        ∧
      </button>
      <button
        aria-label="Insert or (|)"
        class="connective-btn"
        title="Insert or (|)"
        type="button"
      >
        ∨
      </button>
      <button
        aria-label="Insert not (-)"
        class="connective-btn"
        title="Insert not (-)"
        type="button"
      >
        ¬
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Glowing input matches snapshot when shouldGlow is true 1`] = `
<DocumentFragment>
  <div
    class="input-item"
  >
    <label
      class="input-label"
      for="glowing-input-0"
    >
      Enter line number:
    </label>
    <input
      class="input-field "
      id="glowing-input-0"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;
